<resources>
    <!-- Application -->
    <string name="app_name">MyAndroidTools</string>
    <string name="title_home">组件</string>
    <string name="title_process">进程</string>
    <string name="title_about">关于</string>

    <!-- Filter Options -->
    <string name="sort_by_appname">按应用名称</string>
    <string name="sort_by_update_time">按最后更新时间</string>
    <string name="sort_by_uid">按 uid</string>
    <string name="sort_reverse">逆向排序</string>
    <string name="hide_system_apps">隐藏系统应用</string>

    <!-- Components -->
    <string name="tab_overview">应用详情</string>
    <string name="tab_activities">活动</string>
    <string name="tab_receivers">广播接收器</string>
    <string name="tab_services">服务</string>
    <string name="tab_providers">内容提供器</string>
    <string name="empty_component_list">没有组件</string>

    <!-- App Detail -->
    <string name="hint_app_version">版本：</string>
    <string name="hint_apk_path">apk 路径：</string>
    <string name="hint_clipboard_set">文本已复制到剪贴板</string>

    <!-- Process -->
    <string name="process_packages">包列表</string>

    <!-- Misc -->
    <string name="sui_unavailable">Sui 不可用或权限被拒绝</string>
    <string name="project_github_link">https://github.com/Mufanc/MyAndroidTools</string>
    <string name="open_source_license">开放源代码协议</string>

</resources>