<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mufanc.tools.myandroidtools.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_process"
        android:name="mufanc.tools.myandroidtools.ui.fragments.ProcessFragment"
        android:label="@string/title_process"
        tools:layout="@layout/fragment_process" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="mufanc.tools.myandroidtools.ui.fragments.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>